--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,28 @@
 version: "3"
 
 volumes:
-    mysql-data:
-        driver: local
+  mysql-data:
+    driver: local
 
 services:
-    tomcat:
-        image: tomcat:jre8-alpine
-        ports:
-            - "8080:8080"
-            - "9009:8009"
-        volumes:
-            - ./target/jsp-boilerplate-1.0-SNAPSHOT:/usr/local/tomcat/webapps/servlet-sample
+  tomcat:
+    image: tomcat:jre8-alpine
+    ports:
+      - "8080:8080"
+      - "9009:8009"
+    volumes:
+      - ./target/jsp-boilerplate-1.0-SNAPSHOT:/usr/local/tomcat/webapps/servlet-sample
 
-    mysql:
-        image: mysql
-        volumes:
-            - ./database/data:/docker-entrypoint-initdb.d
-        environment:
-            - MYSQL_ROOT_PASSWORD=root
-            - MYSQL_DATABASE=mydb
+  mysql:
+    image: mysql
+    volumes:
+      - ./database/data:/docker-entrypoint-initdb.d
+    environment:
+      - MYSQL_ROOT_PASSWORD=root
+      - MYSQL_DATABASE=mydb
+
+  maven:
+    image: maven:alpine
+    volumes:
+      - .:/usr/src/app
+    working_dir: /usr/src/app
