--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,9 +1,11 @@
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app version="2.5"
+  xmlns="http://java.sun.com/xml/ns/javaee"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+>
 
-<web-app>
-  <display-name>Servlet Sample</display-name>
+  <display-name>Sample Application</display-name>
 
   <!-- Servlet mapping -->
   <servlet>
@@ -14,7 +16,7 @@
   <!-- JSP Mapping, necessary only if JSP is inside WEB-INF -->
   <servlet>
     <servlet-name>SampleJsp</servlet-name>
-    <jsp-file>/jsp/sample.jsp</jsp-file>
+    <jsp-file>/WEB-INF/pages/sampleLogic.jsp</jsp-file>
   </servlet>
 
   <!-- Application routes -->
